--- a/package.json
+++ b/package.json
@@ -15,6 +15,20 @@
   "type": "commonjs",
   "main": "index.js",
   "scripts": {
+    "start": "tsc && node --experimental-modules dist/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "dependencies": {
+    "@types/cheerio": "^0.22.35",
+    "axios": "^1.7.9",
+    "cheerio": "^1.0.0",
+    "discord.js": "^14.17.3",
+    "dotenv": "^16.4.7",
+    "eslint": "^9.19.0",
+    "eslint-plugin-jest": "^28.11.0",
+    "typescript-eslint": "^8.23.0"
+  },
+  "devDependencies": {
+    "typescript": "^5.7.3"
   }
 }
