--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
   "main": "index.js",
   "scripts": {
     "start": "tsc && node --experimental-modules dist/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "tsup src/index.ts --minify"
   },
   "dependencies": {
+    "@js-joda/core": "^5.6.4",
     "@types/cheerio": "^0.22.35",
     "axios": "^1.7.9",
     "cheerio": "^1.0.0",
