--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "dotenv": "^16.4.7",
     "eslint": "^9.19.0",
     "eslint-plugin-jest": "^28.11.0",
-    "typescript-eslint": "^8.23.0"
+    "typescript-eslint": "^8.23.0",
+    "winston": "^3.17.0"
   },
   "devDependencies": {
     "typescript": "^5.7.3"
