--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "dotenv": "^16.4.7",
     "eslint": "^9.19.0",
     "eslint-plugin-jest": "^28.11.0",
+    "playwright": "^1.50.1",
+    "puppeteer": "^24.2.0",
     "typescript-eslint": "^8.23.0",
     "winston": "^3.17.0"
   },
