--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,10 @@
     "forceConsistentCasingInFileNames": true,
     "strict": true,
     "strictNullChecks": true,
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "lib": [
+      "ES2021.String"
+    ]
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules", "dist"]
