Filter (men, women, brand, 3 countries in one)

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,8 @@
     "strictNullChecks": true,
     "skipLibCheck": true,
     "lib": [
-      "ES2021.String"
+      "ES2021.String",
+      "dom"
     ]
   },
   "include": ["src/**/*"],
