--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "main": "index.js",
   "scripts": {
     "start": "tsc && node --experimental-modules dist/index.js",
+    "dev":"tsc && nodemon dist/index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsup src/index.ts --minify"
   },
@@ -28,6 +29,7 @@
     "dotenv": "^16.4.7",
     "eslint": "^9.19.0",
     "eslint-plugin-jest": "^28.11.0",
+    "nodemon": "^3.1.9",
     "playwright": "^1.50.1",
     "puppeteer": "^24.2.0",
     "typescript-eslint": "^8.23.0",
